# Datastructures

./: CMakeLists.txt  Doxyfile  Makefile  README.md  README_8md.html  annotated.html  avl_8c.html  avl_8h.html  avl_8h_source.html  avl__internal_8h.html  avl__internal_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9220686de779a22eba2870941e8d3eee.html  dir_a8069e120ee4307688998c0f61740a76.html  dir_c85d3e3c5052e9ad9ce18c6863244a25.html  dir_dfec15219840db56d1f39c725bd13237.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  greeting_8c.html  greeting_8h.html  greeting_8h_source.html  index.html  menudata.js  mostly-trees_8h.html  mostly-trees_8h_source.html  structavl__insert__result__s-members.html  structavl__insert__result__s.html  structavl__node-members.html  structavl__node.html  structavl__node__s-members.html  structavl__node__s.html  (+8 more)
.github/workflows/: build.yml  clang-format.yml  cmake.yml  docs.yml  format.yml  tests.yml
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
src/demo/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt  mostly-trees.h
src/lib/greeting/: greeting.c  greeting.h
src/lib/trees/: avl.c  avl.h  avl_internal.h
src/lib/universal/: universal.h
src/test/: CMakeLists.txt  avl-balance.c  avl-helper.c  avl-insertion.c  avl-rotation.c  test.c  unittest.c
